--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   firebase_auth: ^5.6.0
   flutter_riverpod: ^2.6.1
   get_it: ^8.0.3
+  another_flutter_splash_screen: ^1.2.1
 
 dev_dependencies:
   flutter_test:
